Update JavaFX version to 22; Version 1.27 release
Signed-off-by: Jason Winning <jason.winning@gmail.com>